# Examen_2_robotica

./: README.md
assets/Ejercicio_2/: ejercicio2_notas.txt
assets/Ejercicio_3/: ejercicio3_notas.txt
src/: Tutorials.txt
src/navigation_tb3/config/: mapping.rviz  rosbostito.lua  turtlebot3_lds_2d.lua
src/navigation_tb3/launch/: mapping.launch.py  move_robot.py
src/sim_moveit/: CMakeLists.txt  package.xml
src/sim_moveit/src/: direc.cpp  inv.cpp  sim_moveit.cpp
